--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Ereigniskalender.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        MinHeight="250" MinWidth="500"
         Title="Ereigniskalender" Height="250" Width="500">
     <DockPanel Margin="10">
         <Button Content="Alle Einträge" DockPanel.Dock="Bottom"
