--- a/ManageWindow.xaml
+++ b/ManageWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Einträge verwalten" Height="500" Width="750"
+        MinHeight="500" MinWidth="750"
         Closing="OnWindowClosing">
     <DockPanel Margin="10">
 
