--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         MinHeight="250" MinWidth="500"
+        ResizeMode="CanMinimize"
         Title="Ereigniskalender" Height="250" Width="500">
     <DockPanel Margin="10">
         <Button Content="Alle Einträge" DockPanel.Dock="Bottom"
